fixed article width on mobile devices

--- a/src/components/ArticleList/styles.scss
+++ b/src/components/ArticleList/styles.scss
@@ -14,4 +14,8 @@
   &.timeout {
     display: flex;
   }
+
+  .article-wrapper {
+    max-width: 100%;
+  }
 }
